--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html lang="zh-cmn-Hans" id="htmlRoot" data-theme="light">
+<html lang="en" id="htmlRoot" data-theme="light">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8"/>
   <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible"/>
   <meta content="webkit" name="renderer"/>
   <meta
